--- a/HoroCrew-WebApp/package.json
+++ b/HoroCrew-WebApp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
+    "emoji-picker-react": "^4.4.8",
     "formik": "^2.2.9",
     "framer-motion": "^10.11.2",
     "react": "^18.2.0",
